# easyssp-simulation-examples-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml
demo/: demo.py  demo_config.py  simulation_operations.py  start_simulation_config_json.py
input/: exampleStimuli.csv  simulation_example.ssp
output/: output.txt
